140话多余的标签去除

--- a/OEBPS/Text/c140.xhtml
+++ b/OEBPS/Text/c140.xhtml
@@ -61,9 +61,7 @@
     <p>“<span class="character">父亲呢……</span>”</p>
     <p>“<span class="character">当然，除了吸血鬼以外我都打算毁灭。只有吸血鬼残留下来，支配世界。这就是我所描绘的未来预想图。</span>”</p>
     <p>“<span class="character">…………</span>”</p>
-    <p>“<span class="character"><span
-            class="character">你觉得很粗暴吗？实际上是这样的吧。失去的东西也很多吧。特别是在文化这一点上，我们吸血鬼差得可怜。在料理、医疗、娱乐、制造、农业……所有的方面，我们都比其他三个种族落后。缺乏自己制造什么的想法。作为生物，一开始就很优秀，弥补不足没有为了赚钱的工夫。只剩下吸血鬼的世界……没有想要更好的“未来”。我们将永远维持‘现在’的现状吧</span>”
-    </p>
+    <p>“<span class="character">你觉得很粗暴吗？实际上是这样的吧。失去的东西也很多吧。特别是在文化这一点上，我们吸血鬼差得可怜。在料理、医疗、娱乐、制造、农业……所有的方面，我们都比其他三个种族落后。缺乏自己制造什么的想法。作为生物，一开始就很优秀，弥补不足没有为了赚钱的工夫。只剩下吸血鬼的世界……没有想要更好的“未来”。我们将永远维持‘现在’的现状吧</span>”</p>
     <p></p>
     <p>吸血鬼对于生活在这个世界上的四个种族中来说，一定是最强的生物。</p>
     <p>他们拥有能与奇美拉匹敌的身体能力，拥有很高的再生力，寿命很长，还和像精灵一样魔法很优秀。</p>
