--- a/OEBPS/Text/c130.xhtml
+++ b/OEBPS/Text/c130.xhtml
@@ -11,145 +11,144 @@
 </head>
 
 <body>
-    <h1>130　濡れ衣</h1>
-    <p>　面倒な事になった。そう思い、メルセデスは隠す事なくわざとらしく溜息を吐く。</p>
-    <p>　レスリーの持っていた本は、現時点では替えの効かない貴重な品だ。</p>
-    <p>　もしかしたら同じ本がどこかにあるかもしれないが、まず大半の者はあの本の価値など気付かずにただの読めない本として捨ててしまうだろう。</p>
-    <p>　だから、メルセデスはあの馬鹿グラシアンが何かしたとしてもレスリーと本だけは保護出来るように手を打ち、事実『何か』は起こった。</p>
-    <p>　レスリーはユリアが救出し、本はあらかじめダンジョンでコピーしておいたものを先に回収しておいたと偽ってレスリーに渡した。ここまではよかったのだ。</p>
-    <p>　だがグラシアンはどうやら、あの本だけは燃やさずに回収していたらしい。</p>
-    <p>　彼があの本の価値を理解出来るとは思えない。</p>
-    <p>　だがレスリーが大事にしていた事から、もしかしたら値打ちがあるのかもしれない、程度には考えたのだろう。</p>
-    <p>　それが今、この最悪な状況下で……暗殺された被害者の側に落ちていたという最悪な形で出て来てしまったわけだ。</p>
-    <p>　実に面倒だ、と思う。</p>
-    <p>　だがメルセデスが溜息を隠す気が失せるほどに面倒だと感じたのは本が出て来た事に対してではない。</p>
-    <p>　本が出てきたというだけで、彼等がレスリーを犯人にしようとしているという現状こそが何よりも面倒なのだ。</p>
+    <h1>130. 湿衣服</h1>
+    <p>事情麻烦了。这样想着，梅赛德斯毫不隐瞒地故意叹气。</p>
+    <p>莱斯利拿着的书，是目前无法替换的贵重物品。</p>
+    <p>也许同一本书在某个地方也有，但是首先大半的人会在不知道那本书的价值的情况下，作为一本无法读的书扔掉吧。</p>
+    <p>所以，梅赛德斯为了让那个笨蛋格拉西兰不管做什么，都能保护莱斯利和书本，事实上发生了什么。</p>
+    <p>尤里亚救出了莱斯利，书伪装成事先在地牢里复制的东西已经回收了，交给了莱斯利。到此为止太好了</p>
+    <p>但是格拉西兰好像只回收了那本书，没有烧。</p>
+    <p>也不认为他能理解那本书的价值。</p>
+    <p>但是，从莱斯利非常重视的事情来看，或许是想到了这个很有价值而留下来了。</p>
+    <p>这就是现在，在最坏的情况下……落到被暗杀的被害者身边的最坏的形态。</p>
+    <p>真是麻烦</p>
+    <p>可不是书出来了，梅塞德斯才觉得烦到无法掩饰自己的叹息。</p>
+    <p>仅仅因为书出来了，他们就想把莱斯利当成罪魁祸首，这是最麻烦的事情。</p>
     <p></p>
-    <p>“<span class="character">なるほど……殺された奴の側からレスリーの私物が出てきた。だからレスリーは犯人だと……そう言いたいのか？</span>”</p>
-    <p>“<span class="character">ああ、可能性は高いと思っている</span>”</p>
-    <p>“<span class="character">なるほど</span>”</p>
+    <p>“<span class="character">原来如此……被杀的那家伙身上拿出了莱斯利的私人物品。所以说莱斯利是犯人……你想这么说吗？</span>”</p>
+    <p>“<span class="character">啊，我觉得可能性很高。</span>”</p>
+    <p>“<span class="character">原来如此</span>”</p>
     <p></p>
-    <p>　メルセデスは周囲を軽く見渡し、レスリーに詰め寄ろうとしている連中の数を数える。</p>
-    <p>　人数はざっと吸血鬼が十人、エルフェが十二人……いずれも武装していて、やる気満々といった表情をしている。</p>
-    <p>　まあ、そんな顔になるのも無理はない。</p>
-    <p>　何せ彼等は……ここで犯人を捕まえないときっと未来がないだろうからな、とメルセデスは内心で僅かばかり同情をした。</p>
+    <p>梅赛德斯将周围的人都看得一清二楚，数着想要逼近莱斯利的人的数量。</p>
+    <p>人数大概有十个吸血鬼，十二个精灵……都是武装起来的，一副干劲十足的表情。</p>
+    <p>嘛，露出那种表情也不是不可能的。</p>
+    <p>他们这么做的原因……因为如果不在这里抓到犯人的话，肯定就没有未来了吧，梅赛德斯在内心稍微同情了一下。</p>
     <p></p>
-    <p>“<span class="character">吸血鬼は一晩で七人殺られた。エルフェはどうだ？</span>”</p>
-    <p>“<span class="character">え？　あ、ああ……こっちは九人だ</span>”</p>
-    <p>“<span class="character">昨晩、その全員は別々の場所にいて、護衛に守られていた。にもかかわらず殺され、拷問まで受けた。そうだな？</span>”</p>
-    <p>“<span class="character">そりゃあ……被害者は全員貴族だからな。護衛くらいいるさ</span>”</p>
-    <p>“<span class="character">そうか。で、聞きたいんだが……それをどうやってレスリーが殺して、拷問までしたんだ？</span>”</p>
+    <p>“<span class="character">吸血鬼一晚上就被杀了七个人。精灵怎么样？</span>”</p>
+    <p>“<span class="character">啊？啊，啊……这边是九个人。</span>”</p>
+    <p>“<span class="character">昨晚，他们都在不同的地方，被警卫保护着。尽管如此，他们还是被杀了，甚至还受到了拷问。是吗？</span>”</p>
+    <p>“<span class="character">那当然……因为被害者都是贵族。至少有护卫。</span>”</p>
+    <p>“<span class="character">是吗？我想问一下……那是莱斯利怎么杀的，甚至拷问的？</span>”</p>
     <p></p>
-    <p>　メルセデスが呆れたような声で発した問いに、すぐに答えられる者は一人もいなかった。</p>
-    <p>　当然だ。何故ならレスリーにそんな芸当が出来るわけがないのだから。</p>
-    <p>　レスリーは確かに彼等を殺そうと思えば殺せる。それだけの殺傷力を持った武器を所持しているし、その威力は昨日大勢の前で実証された。</p>
-    <p>　しかし遠距離からの狙撃による暗殺ならばともかく、どうやってレスリーが護衛に気付かれずに住居に侵入して相手を仕留めるというのだ。</p>
-    <p>　いや、そもそも遠距離から狙撃をしたとしても、その時は銃声が必ず鳴り響く。</p>
-    <p>　誰にも気付かれずにレスリーが貴族を殺すなど出来るわけがない。</p>
-    <p>　メルセデスだって、一人でそんな芸当をやり遂げるのは難しいだろう。</p>
+    <p>对于梅赛德斯用惊讶的声音提出的问题，没有一个人能马上回答出来。</p>
+    <p>当然。因为莱斯利运动员不可能做出那样的技能。</p>
+    <p>莱斯利的确想杀他们就能杀了。拥有如此杀伤力的武器，昨天在众人面前证实了其威力。</p>
+    <p>但是，如果是远距离狙击暗杀的话那就另当别论了，据说莱斯利是如何在没有被护卫发现的情况下潜入住所，杀死对方的。</p>
+    <p>不，本来就算从远距离狙击，那个时候枪声也一定会响起。</p>
+    <p>莱斯利不可能在没有人注意的情况下杀死一个贵族。</p>
+    <p>就算是梅赛德斯，一个人完成那样的技能也很难吧。</p>
     <p></p>
-    <p>“<span class="character">それは……いや、我々も何も単独犯とは言っていない。恐らく複数犯……そのうちの一人ではないかと言っているのだ</span>”</p>
-    <p>“<span class="character">だから、どうやってレスリーがそんな事を出来るんだ？　彼女が魔法を使えない事くらい知っているだろう。かといって銃で撃てば銃声が響く。レスリーにそんな事をする能力などない</span>”</p>
-    <p>“<span class="character">言い方！</span>”</p>
+    <p>“<span class="character">那……不，我们也没说是单独犯。恐怕是多个犯……说是其中一个。</span>”</p>
+    <p>“<span class="character">所以，莱斯利运动员怎么能做那种事呢？至少知道她不会使用魔法吧。但是如果用枪射击的话，枪声就会响。莱斯利没有能力做那种事。</span>”</p>
+    <p>“<span class="character">怎么说！</span>”</p>
     <p></p>
-    <p>　一応レスリーの擁護をしているメルセデスだが、その身も蓋もない言い草に思わずレスリーが突っ込みを入れた。</p>
-    <p>　だが言い方の悪さはともかく、メルセデスの言っている事は正論だ。</p>
-    <p>　容疑者にそもそも、その疑われている事を為す能力がないというのは、強力なアリバイとなる。</p>
-    <p>　例えば筋骨隆々の大男が素手で撲殺されていたとして、その近くにもっと大きい男がいれば誰もが彼を疑うだろう。</p>
-    <p>　だが近くにいたのが非力な赤子だったならば、誰もその赤ん坊に疑いなどかけない。</p>
-    <p>　何故なら『不可能だから』。</p>
-    <p>　レスリーも同じ事だ。彼女にグラシアンを害する気があったかどうかなど、ここでは問題にならない。</p>
-    <p>　単純に出来ないのだから、そもそも容疑者にしようがないのだ。</p>
+    <p>虽然梅赛德斯暂时拥护莱斯利，但莱斯利却不由自主地吐槽了这毫无遮拦的说法。</p>
+    <p>但是，先不说说话方式不好，梅赛德斯说的话是正确的。</p>
+    <p>嫌疑犯本来就没有能力做那个被怀疑的事情，这是强有力的不在场证明。</p>
+    <p>例如，肌肉发达的大汉被赤手空拳打死，如果那附近有更大的男人的话，谁都会怀疑他吧。</p>
+    <p>但是如果身边的是无力的婴儿的话，谁都不会怀疑那个婴儿。</p>
+    <p>因为“不可能”。</p>
+    <p>莱斯利也是一样的。在这里没有问题，比如她有没有想伤害格拉西兰。</p>
+    <p>因为单纯的做不出来，所以根本就无法成为嫌疑人。</p>
+    <p>“<span class="character">但，但是……应该有什么方法！首先要抓住并审问，然后再寻找杀人方法和证据……</span>”</p>
+    <p>“<span class="character">手段和目的完全相反啊。虽然我知道……你们不是为了逮捕犯人，只是想要‘抓到犯人’这样的实绩吧？</span>”</p>
     <p></p>
-    <p>“<span class="character">だ、だが……方法は何かあったはずだ！　まずは捕えて尋問し、それから殺害方法や証拠を探せば……</span>”</p>
-    <p>“<span class="character">手段と目的が完全に逆になっているな。まあ、分かってはいたが……お前達、犯人を捕まえるのが目的ではなく、『犯人を捕まえた』という実績が欲しいだけなんだろう？</span>”</p>
+    <p>对于梅赛德斯的指摘，怀疑莱斯利的人们不由得说了一句话。</p>
+    <p>从结论来说，他们并不认为莱斯利是犯人。</p>
+    <p>想把莱斯利当成犯人。</p>
+    <p>不是在寻找状况证据和物证后才好不容易找到……，而是先抓住“把这家伙当成犯人”的某个人，然后再找证据。</p>
+    <p>虽然这是本末倒置，但梅赛德斯也知道不得不这么做的理由。</p>
     <p></p>
-    <p>　メルセデスの指摘に、レスリーを疑っていた者達は思わずといった様子で言葉に詰まった。</p>
-    <p>　結論から言えば彼等はレスリーを犯人だと思っているわけではない。</p>
-    <p>　レスリーを犯人にしたい・・・のだ。</p>
-    <p>　状況証拠や物的証拠を探して初めて辿り着く……のではなく、まず先に『こいつを犯人にしよう』と決めた誰かを捕まえてから証拠を探す。</p>
-    <p>　それでは本末転倒だが、そうせざるを得ない理由もメルセデスには分かっていた。</p>
+    <p>“<span class="character">你们是被杀的贵族的护卫吧？</span>”</p>
+    <p>“<span class="character">嗯……</span>”</p>
+    <p>“<span class="character">護衛対象が惨たらしく殺され、しかもその犯人すら捕まえられないとなれば、被害者の遺族からの怒りを買う事は避けられん。そして被害者は全員貴族……物理的に首が飛んでもおかしくない失態だ。</span></p>
+    <p><span class="character">所以至少要有“抓住犯人，报仇”的功绩。</span></p>
+    <p><span class="character">碰巧的话，如果被害者家属的愤怒转向那个犯人···，那就更好了。也许对自己的矛会偏离。那样的地方吗？</span>”</p>
     <p></p>
-    <p>“<span class="character">お前達、殺された貴族の護衛だろう？</span>”</p>
-    <p>“<span class="character">うっ……</span>”</p>
-    <p>“護衛対象が惨たらしく殺され、しかもその犯人すら捕まえられないとなれば、被害者の遺族からの怒りを買う事は避けられん。そして被害者は全員貴族……物理的に首が飛んでもおかしくない失態だ。</p>
-    <p>だからせめて『犯人を捕まえて、仇は取りました』という功績が欲しいわけだ。</p>
-    <p>あわよくば、その犯人・・に被害者家族の怒りが向けば、尚良し。自分達への矛が逸れるかもしれない。そんな所か”</p>
+    <p>他们现在想要替罪羊。梅赛德斯如此推测。</p>
+    <p>在这次事件中，只有汉娜保护了护卫对象，抓住了其中一个犯人。</p>
+    <p>这样她的评价就越来越高了，但是问题是保护其他受害者的人。</p>
+    <p>仅仅是因为无法保护作为护卫对象的贵族就大失所望，不可避免地会遭到遗属的愤怒和怨恨。</p>
+    <p>而且如果犯人没有抓到的话，愤怒会更加强烈，燃烧起来的愤怒肯定会指向护卫他们吧。</p>
+    <p>所以他们必须尽快抓住愤怒的矛头“犯人”。</p>
+    <p>然后，被选为矛头的是和一名受害者关系不好，前几天进行了决斗的莱斯利。</p>
     <p></p>
-    <p>　彼等は今、スケープゴートを欲している。そうメルセデスは推測していた。</p>
-    <p>　今回の事件で護衛対象を守り、犯人の一人を捕らえたのはハンナだけだ。</p>
-    <p>　これで彼女の評価は益々上がったが、問題は他の被害者を護衛していた者達である。</p>
-    <p>　護衛対象の貴族を守り切れなかったというだけでも大失態で、遺族からの怒りや恨みを向けられるのは避けられない。</p>
-    <p>　しかも犯人が捕まっていなければ怒りは更に加熱し、その燃え上がった怒りは間違いなく護衛していた彼等へと向けられるだろう。</p>
-    <p>　だから彼等は早急に怒りの矛先となる『犯人』を捕まえなくてはならないのだ。</p>
-    <p>　そして、その矛先として選ばれたのが、被害者の一人と不仲で先日には決闘まで行ったレスリーであった。</p>
+    <p>“<span class="character">好像相当着急啊。因为目击到了犯人福吉拉，原本作为精灵的莱斯利连替罪羊都没起作用。</span></p>
+    <p><span class="character">倒不如说，如果模仿我伸出救援之手的话，由于这种轻率的冒充行为，会让死者家属更加愤怒，甚至连莱斯利家也会变成敌人。是说连那种事都不知道的窘迫吗？</span>”</p>
+    <p>“<span class="character">嗯……那是……</span>”</p>
     <p></p>
-    <p>“余程焦っているようだな。犯人のフォーゲラが目撃されているのだから、そもそもエルフェであるレスリーではスケープゴートとしてすら機能しないだろうに。</p>
-    <p>むしろレスリーを差し出すような真似をすれば、その浅慮な詐称によってますます遺族の怒りを買い、更にレスリーの家も敵に回すぞ。そんな事も分からん程切羽詰まっているという事か”</p>
-    <p>“<span class="character">う……それは……</span>”</p>
+    <p>对于梅赛德斯的话，他们甚至无法反驳。</p>
+    <p>他们一开始就想把莱斯利变成罪犯，但她也是贵族的一员。</p>
+    <p>如果让那样的对方背负冤枉罪的话，当然会把那个家变成敌人。</p>
+    <p>梅赛德斯不知道莱斯是被家人爱着还是被疏远。</p>
+    <p>但是贵族和王族可以说是靠面子吃饭的存在。</p>
+    <p>不允许杀死家里的贵族。</p>
+    <p>对于莱斯利的父亲来说，不管对女儿有没有爱情，只要有“女儿快要被冤枉了”的事实，就必须全力报复。</p>
+    <p>如果真的说莱斯利是犯人的话，会被所有被害者家属盯上，权威也会丧失。</p>
+    <p>对与贵族相连的人抱有怀疑的是，企图使之堕落的行为……等同于宣战布告的愚蠢行为。</p>
     <p></p>
-    <p>　メルセデスの言葉に、彼等は反論すら出来なかった。</p>
-    <p>　そもそも彼等が犯人に仕立てようとしていたレスリーも貴族の一員なのだ、</p>
-    <p>　そんな相手に無実の罪など被せれば、当然その家を敵に回す事になる。</p>
-    <p>　レスリーが家族に愛されているか、それとも疎まれているかはメルセデスには分からない。</p>
-    <p>　だが貴族や王族というのは面子で飯を食っていると言っていい存在だ。</p>
-    <p>　家族から貴族殺しなど出すわけにはいかない。</p>
-    <p>　レスリーの父からすれば、娘への愛情の有無はどうあれ、『娘が無実の罪を被せられそうになった』という事実があれば、全力で報復しなければならない案件だ。</p>
-    <p>　仮にこれで本当にレスリーが犯人だったなどと言われてしまえば、全ての被害者遺族から睨まれる事になるし、権威も失墜してしまう。</p>
-    <p>　貴族に連なる者に疑いをかけるのは、その家を失墜させようとしているも同然の行い……宣戦布告に等しい愚行である。</p>
+    <p>“<span class="character">如果您有时间寻找替罪羊，请尝试找到真正的罪犯。</span>”</p>
     <p></p>
-    <p>“<span class="character">スケープゴートなど探している暇があるなら、本当の犯人を捜す努力でもしておけ</span>”</p>
+    <p>最后只说那个，然后用手支付的动作。</p>
+    <p>对于梅赛德斯的态度，受害者的护卫们露出不满的表情，但是因为没有反驳的话，所以什么也说不出来。</p>
+    <p>再怎么胡闹也只会使立场越来越不好。</p>
+    <p>即使不是那样，既然闹到了这种地步，当然会有很多人目击到这一连串的骚动。</p>
+    <p>也就是说，他们现在除了“没能保护护卫对象的无能”这一烙印之外，还给大家留下了“想给无辜的少女犯罪的下众”的印象。</p>
+    <p>即使在这里吃掉梅赛德斯，印象只会进一步恶化，也没有什么好事。</p>
+    <p>结果他们把书还给了莱斯利，然后迈着沉重的步伐返回，旅馆前终于安静下来了。</p>
     <p></p>
-    <p>　最後にそれだけ言い、しっし、と手で払う動作をする。</p>
-    <p>　メルセデスのその態度に被害者の護衛達は不満そうな顔をするが、言い返す言葉がないので何も言えない。</p>
-    <p>　これ以上下手に騒いでも益々立場を悪くするだけだ。</p>
-    <p>　そうでなくとも、ここまで派手に騒いでしまった以上、この一連の騒ぎは当然大勢に目撃されているし聞かれている。</p>
-    <p>　つまり彼等は今、『護衛対象を守れなかった無能』という烙印に加えて『無実の少女に罪を被せようとする下衆』という印象まで皆に持たれてしまっている。</p>
-    <p>　ここでメルセデスに食ってかかっても、更に印象が悪化するだけで何もいい事がない。</p>
-    <p>　結局彼等はレスリーに本を返却してからトボトボと重い足取りで引き返し、ようやく宿屋前が静かになった。</p>
+    <p>“<span class="character">……总觉得有点可怜呢</span>”</p>
+    <p>“<span class="character">是啊。他们也是这次事件的受害者。</span>”</p>
     <p></p>
-    <p>“<span class="character">……何か、ちょっと可哀想だったね</span>”</p>
-    <p>“<span class="character">そうだな。奴等もまた今回の一件の被害者だ</span>”</p>
+    <p>看着离去的护卫们的背影，梅赛德斯也同意了莱斯利可怜地说的内容。</p>
+    <p>虽然不应该表扬以莱斯利为替罪羊的行为，但是他们也被逼得如此拼命。</p>
     <p></p>
-    <p>　去っていく護衛達の背中を見ながら、レスリーが哀れむように話す内容にメルセデスも同意を示した。</p>
-    <p>　レスリーをスケープゴートにしようとした行いは褒められるべきではないが、彼等もそこまで必死になるほど追い詰められているという事だ。</p>
+    <p>“<span class="character">总之，有必要尽快逮捕犯人。</span>”</p>
     <p></p>
-    <p>“<span class="character">ともかく、早急に犯人を捕まえる必要があるな</span>”</p>
+    <p>不管那些护卫们如何，梅赛德斯的想法就是必须尽快逮捕犯人。</p>
+    <p>如果放任不管的话，今后也会有同样的受害者出现，如果处理不好的话，吉克林德的身上也会有危险。</p>
+    <p>只要有汉娜在身边，就不会发生太多的事情，但是凡事不要过于相信。</p>
+    <p>总之好像在审问汉娜的部下抓到的犯人，等那个情报吧。</p>
     <p></p>
-    <p>　あの護衛達はともかくとして、犯人は早急に捕まえなければならない、というのがメルセデスの考えであった。</p>
-    <p>　放置しては今後も同じように被害者が出るだろうし、下手をすればジークリンデの身にも危険が及ぶかもしれない。</p>
-    <p>　ハンナが側にいる限り滅多な事は起きないと思うが、何事も過信は禁物だ。</p>
-    <p>　とりあえずはハンナの部下が捕まえた犯人を尋問しているらしいので、その情報待ちか。</p>
+    <p>“<span class="character">喂，梅赛德斯</span>”</p>
+    <p>“<span class="character">什么？</span>”</p>
+    <p>“<span class="character">这个……你觉得是怎么回事？</span>”</p>
     <p></p>
-    <p>“<span class="character">ねえ、メルセデス</span>”</p>
-    <p>“<span class="character">何だ？</span>”</p>
-    <p>“<span class="character">これ……どういう事だと思う？</span>”</p>
+    <p>但是除了袭击犯以外还有其他麻烦的事情。</p>
+    <p>莱斯利表情严肃的样子，是她拿着的两本书，完全一样的书。</p>
+    <p>梅赛德斯瞥了一眼那里，好像没有线索似的说。</p>
     <p></p>
-    <p>　しかし襲撃犯以外にも厄介な事は残っていた。</p>
-    <p>　レスリーが険しい顔で見せてきたのは、彼女が持っている二冊・・の、全く同じ本であった。</p>
-    <p>　メルセデスはそちらを一瞥すると、心当たりがないかのように話す。</p>
+    <p>“<span class="character">谁知道呢，那家伙不是也有同样的书吗？</span>”</p>
+    <p>“<span class="character">同一本书……是啊。我之前洒下的果汁的污迹，好像连在书页角落写的笔记都有的同一本书。</span>”</p>
     <p></p>
-    <p>“<span class="character">さてな。奴も同じ本を持っていたんじゃないか？</span>”</p>
-    <p>“<span class="character">同じ本……そうね。私が前に零した果汁の染みや、ページの隅に書いたメモ書きまで同じ本を持っていたみたいね</span>”</p>
+    <p>梅赛德斯在脑内，一边将去世的格拉西兰打得破破烂烂，一边思考着这是怎么解释的。</p>
+    <p>干脆坦白说自己有地牢也是有的吧。</p>
+    <p>至少莱斯利是一个值得信赖的家伙。</p>
+    <p>不要做那种不着边际到处张扬的事。</p>
+    <p>但是，尽管如此，梅赛德斯还是不太清楚莱斯的事情。</p>
     <p></p>
-    <p>　メルセデスは脳内で、今は亡きグラシアンをボコボコにしながら、どう言い訳したものかと考える。</p>
-    <p>　いっそ正直にダンジョン持ちだと白状してしまうのもありと言えばありなのだろうか。</p>
-    <p>　少なくともレスリーは、それなりには信用出来る相手だ。</p>
-    <p>　無暗やたらとあちこちに話を広げるような真似はすまい。</p>
-    <p>　しかしだからといって、秘密を打ち明けるにはメルセデスはレスリーの事をまだよく知らない。</p>
-    <p></p>
-    <p>“……お前に疑いを向ける為に誰かが全く同じ本を複製していたか……それともあの馬鹿が何かしていたのか……。</p>
-    <p>どちらにせよ、今は知る術がないな”</p>
+    <p>“<span class="character">……为了怀疑你，是谁复制了完全一样的书呢……还是那个笨蛋在做什么呢……。</span></p>
+    <p><span class="character">不管怎么说，现在已经没有办法知道了</span>”</p>
     <p>“<span class="character">…………</span>”</p>
     <p></p>
-    <p>　自分から疑いの視線を逸らす為に、メルセデスはここにいないグラシアンと襲撃の犯人を話題に出した。</p>
-    <p>　しかしレスリーの視線はメルセデスに固定されており、少し居心地が悪い。</p>
-    <p>　だが救いの手は意外な場所から現れた。</p>
-    <p>　遠くから吸血鬼が走って来たと思いきや、ハンナに何かを耳打ちして走り去っていく。</p>
-    <p>　それからハンナはメルセデスの方を向いた。</p>
+    <p>为了从自己身上移开怀疑的视线，梅赛德斯把不在这里的格拉西和袭击的犯人作为话题。</p>
+    <p>但是，莱斯利的视线固定在梅赛德斯，感觉有点不舒服。</p>
+    <p>但是救星的手却从意外的地方出现了。</p>
+    <p>原以为吸血鬼从远处跑了过来，没想到却在汉娜耳边耳语着什么跑了过去。</p>
+    <p>然后汉娜转向了梅赛德斯。</p>
     <p></p>
-    <p>“メルちゃん、朗報だよ。たった今、捕えてたフォーゲラから上手く情報を搾り取れたってさ。</p>
-    <p>襲撃犯の隠れ家も分かったみたい”</p>
+    <p>“<span class="character">小梅尔，好消息啊。刚刚捕捉到的福格拉很好地榨取了情报。</span></p>
+    <p><span class="character">好像也知道了袭击犯的藏身之处</span>”</p>
 </body>
 
 </html>
