--- a/OEBPS/Text/c135.xhtml
+++ b/OEBPS/Text/c135.xhtml
@@ -11,180 +11,181 @@
 </head>
 
 <body>
-    <h1>135　急転</h1>
-    <p>　――開き直った。</p>
-    <p>　メルセデスに生じた変化を身も蓋もなく言ってしまえば、それだけの事でしかない。</p>
-    <p>　だが、たったそれだけの事が今後の世界を左右するとハンナは直感していた。</p>
-    <p>　今までずっと、自分の狂暴性から目を背けて、必死に本性を抑え込んでいた怪物が、己を偽る事を諦めたのだ。</p>
-    <p>　竜がどれだけ頑張ってトカゲのふりをしても、トカゲにはなれない。</p>
-    <p>　生まれ持った怪物としての本能が、他の小さな生物を獲物と認識させる。それと同じ事だ。</p>
-    <p>　これでも、メルセデスなりに我慢はしたのだ。努力はしたのだ。</p>
-    <p>　生まれてから十七年間も必死に自分を抑えて、何とか他の弱者と足並みを揃えようと頑張った。踏み潰してしまわないように、周囲と同じであるように演じた……いや、演じようとした。</p>
-    <p>　だが無理だった。学園の狩猟祭で他の有象無象を派閥など知らぬと纏めて潰してしまったように、元々が竜では、他のトカゲと同じ枠組みの中では生きられない。</p>
-    <p>　そもそもが矛盾していたのだ。</p>
-    <p>　悔いなく生きたいと願うくせに、自分を抑え込んで他の者の真似をして、それでどうして目的が達成出来る。</p>
-    <p>　そんな生き方をしては、それこそ悔いしか残らないだろう。前世でもそうだったではないか。</p>
-    <p>　もう十分我慢した、迷走もした。それで無理だった。</p>
-    <p>　なら、もういいだろう。結局馬鹿は死んでも治らない……メルセデス・グリューネヴァルトという月はどうしようもなく最初から歪んでいたのだから。</p>
-    <p>　……だから……もういい加減、自分を受け入れてやってもいいだろう。</p>
+    <h1>135. 急转</h1>
+    <p>——突然改变主意了。</p>
+    <p>如果把梅赛德斯所产生的变化毫无遮掩地说出来的话，那也只不过是这些而已。</p>
+    <p>但是，汉娜感觉到，只有这样的事情才能左右今后的世界。</p>
+    <p>到现在为止，一直无视自己的狂暴性，拼命压抑自己本性的怪物，放弃了伪装自己。</p>
+    <p>龙再怎么努力假装蜥蜴，也不能成为蜥蜴。</p>
+    <p>作为天生怪物的本能，让其他小生物认识到自己是猎物。那是一样的事。</p>
+    <p>即便如此，梅赛德斯也能忍受。我努力了。</p>
+    <p>出生以来十七年间拼命压抑自己，努力和其他弱者保持一致。为了不让自己崩坏，我演得和周围人一样……不，我想演。</p>
+    <p>但是不行。就像在学园的狩猎祭上把其他的大象和派别等不知道的东西汇总在一起，然后将其击溃一样，原本是龙的话，就不能和其他的蜥蜴在同一个框架中生存。</p>
+    <p>原本就是矛盾的。</p>
+    <p>明明想要无怨无悔地生活，却压抑着自己模仿别人，这样为什么能达到目的呢。</p>
+    <p>那样的生活方式，只有后悔吧。前世不是也这样吗。</p>
+    <p>我已经忍耐够了，也迷失了方向。所以不行。</p>
+    <p>那就好了吧。结果，笨蛋死了也治不好……梅赛德斯・格鲁内瓦特这个月是无论如何都没有办法从一开始就扭曲着的。</p>
+    <p>……所以……差不多该接受自己了吧。</p>
     <p></p>
-    <p>“<span class="character">世界征服か……そうだな。別に世界など欲しくはないが、私の当面の目的を達成しようとすれば、そうなるのだろう</span>”</p>
+    <p>“<span class="character">“征服世界吗……是啊。我并不想要什么世界，但如果要达到我目前的目的的话，就会变成这样吧。”</span>”</p>
     <p></p>
-    <p>　世界の支配にも統治にも興味はない。</p>
-    <p>　ただ、現状とりあえず目的としている事を果たすならば、自然とそういう形になるだろう。</p>
+    <p>对世界的支配和统治都没有兴趣。</p>
+    <p>只是，如果先实现现状的目的的话，自然就会变成那样的形式吧。</p>
     <p></p>
-    <p>“<span class="character">多分、この世界の求めるゴールがそれなんだろう。ダンジョンのシステムなど、明らかに一人の頂点を決めさせようとしているからな</span>”</p>
+    <p>“<span class="character">“大概，这个世界所追求的目标就是这个吧。因为地下城系统等，明显地决定了一个人的顶点。”</span>”</p>
     <p></p>
-    <p>　ハンナ達が知らないのは当たり前だが、ダンジョンは全て入手する事で明かされる真実がある。</p>
-    <p>　全てのダンジョンを入手する事でダンジョン№０が解放され、そして誰かがそれを手に入れた時……この星で行われているコンペティションが終了し、全ての種族の命運が決定される。</p>
-    <p>　つまり、この星は最初からダンジョンを奪い合う為だけの殺し合いの場なのだ。</p>
+    <p>汉娜他们不知道是理所当然的，但迷宫有通过全部得到而被证明的真相。</p>
+    <p>通过获得全部地牢，地牢No.0被释放，然后当有人得到地牢No.0时……在这个星球上进行的竞赛结束，决定了所有种族的命运。</p>
+    <p>也就是说，这个星球是从一开始就为了争夺地下城而互相残杀的场所。</p>
     <p></p>
-    <p>“まあ、すぐには飲み込めないだろう。ゆっくり考えればいい。</p>
-    <p>その間に私は、私のするべき事をする”</p>
-    <p>“<span class="character">……どうするつもり？</span>”</p>
-    <p>“<span class="character">決まっている。ダンジョンの強奪だ</span>”</p>
+    <p>“<span class="character">好吧，你无法立即消化它。慢慢想。</span></p>
+    <p><span class="character">在这期间，我要做我应该做的事”</span>”</p>
+    <p>“<span class="character">“……你打算怎么办？”</span>”</p>
+    <p>“<span class="character">“已经决定了。进行地下城的强夺。”</span>”</p>
     <p></p>
-    <p>　やると決めたなら、もう迷う必要はない。</p>
-    <p>　現在他者の手にあると分かっているダンジョンは八つ……ジークリンデが一つ、フェリックスが一つ、ベルンハルトが最低でも一つ、フォーゲラが一つ、それからシメーレとエルフェが二つずつだ。</p>
-    <p>　ならば後は順番を決めるだけだ。</p>
-    <p>　最終的に全て平らげるにしても、順番を間違えれば少々厄介な事になる。</p>
-    <p>　ここでジークリンデやフェリックスから強奪すれば戦力増強にはなるが、まず間違いなく国賊となる。</p>
-    <p>　今後を考えれば、まだ吸血鬼の国全体を敵に回すべきではない。</p>
-    <p>　それにジークリンデはそんな事をしなくても高確率で味方につくだろう存在だ。ここで無意味に敵に回す旨味はない。</p>
-    <p>　エルフェを始めとする他の種族を狙っても、その間にベルンハルトが他の種族を滅ぼしてしまうかもしれない。</p>
-    <p>　ならば……もう、狙うべき相手は一人しかいないだろう。</p>
+    <p>如果决定做的话，就没有必要再犹豫了。</p>
+    <p>现在知道现在在别人手里的地下城有八个……一个吉克林德的，一个菲利克斯的，一个伯恩哈特，一个鸟人的，还有一个奇美拉和一个精灵的。</p>
+    <p>那么接下来就只定顺序了。</p>
+    <p>即使要最终全部吃光，如果弄错顺序的话也会有点麻烦。</p>
+    <p>在这里如果从吉克林德和菲利克斯那里掠夺的话，战力就会增强，但首先肯定会变成国贼。</p>
+    <p>考虑到今后，还不应该把整个吸血鬼国家都当成敌人。</p>
+    <p>而且吉克林德是即使不做那样的事，也会有很高概率地成为伙伴的存在。在这里没有毫无意义地让她转为敌人的好处。</p>
+    <p>即使攻击以精灵族为首的其他种族，在这期间伯恩哈特可能会毁灭其他种族。</p>
+    <p>如果是这样的话……应该针对的对象就只有一个了吧。</p>
     <p></p>
-    <p>“<span class="character">今から、少し父と会って来る</span>”</p>
-    <p>“<span class="character">……っ！　戦うつもりなの！？　ベルンハルトと！</span>”</p>
-    <p>“<span class="character">そうなるな</span>”</p>
-    <p>“<span class="character">待って、それは……えっと……いや、でも、それが一番……？　ああ、でも！</span>”</p>
+    <p>“<span class="character">现在开始，我去见一下父亲。</span>”</p>
+    <p>“<span class="character">……！你打算战斗吗！？和伯恩哈特！</span>”</p>
+    <p>“<span class="character">就是这样</span>”</p>
+    <p>“<span class="character">等等，那是……呃……不，但是，那是最好的……？啊，但是！</span>”</p>
     <p></p>
-    <p>　ハンナは賢い。</p>
-    <p>　だからこそ、分かってしまう。</p>
-    <p>　メルセデスの言っている事、やろうとしている事は滅茶苦茶だが実際まさに起ころうとしている全面戦争を回避する方法として、メルセデスの答えは決してそこまで間違えていないのだ。</p>
-    <p>　まず最優先順位は何を措いてもベルンハルトを止める事。そうしなければものの数日後にはフォーゲラに対する侵略戦争が始まり、そこで終わるはずもなく次は全面戦争だ。</p>
-    <p>　それに、多分……この結論を出しているのはメルセデスだけではない。</p>
-    <p>　もしもフォーゲラの後にエルフェとシメーレを相手にするならば、ベルンハルトの持つダンジョンだけではまだ不安が残る。</p>
-    <p>　ならば戦力増強の手段としてベルンハルトは……まず間違いなく、メルセデスに目を付ける！</p>
-    <p>　そう、この親子はあろう事か、互いを倒すべき相手と見なしているのだ。</p>
-    <p>　倒し……その力を取り込み、服従させようと企てている。</p>
+    <p>汉娜很聪明。</p>
+    <p>所以才会明白。</p>
+    <p>梅赛德斯说的话，想做的事情是乱七八糟的，但是作为回避实际即将发生的全面战争的方法，梅赛德斯的回答绝对没有那么错。</p>
+    <p>首先最优先的顺序是不管怎么说都要阻止伯恩哈特。如果不那样做的话，几天后就会开始对鸟人的侵略战争，之后就不会结束了，而是全面战争。</p>
+    <p>而且，大概……得出这个结论的不只是梅赛德斯。</p>
+    <p>如果在鸟人之后和精灵和奇美拉成为对手的话，光是伯恩哈特拥有迷宫就还残留着不安。</p>
+    <p>如果是这样的话，作为增强战斗力的手段，伯恩哈特……首先一定要注意梅赛德斯！</p>
+    <p>是的，这对父女竟然把他们当成了应该互相打倒的对象。</p>
+    <p>打倒……企图取其力量，使其服从。</p>
     <p></p>
-    <p>“<span class="character">……止められないんだね？</span>”</p>
-    <p>“<span class="character">無理だな。仮に私がここで立ち止まっても、向こうからやって来る。そして私も止まる気はない</span>”</p>
-    <p>“<span class="character">はあ……もう、本当にさあ……ほんっと……親子なんだから……</span>”</p>
+    <p>“<span class="character">“……停不下来吧？”</span>”</p>
+    <p>“<span class="character">“不行啊。就算我在这里停下来，也会从对面过来。而且我也不想停下来。”</span>”</p>
+    <p>“<span class="character">“啊……真是的……真的……因为是父女……”</span>”</p>
     <p></p>
-    <p>　改めてベルンハルトがメルセデスに入れ込むわけだ、と納得する。</p>
-    <p>　メルセデスは、ベルンハルトという竜が初めて見付けた同種なのだ。</p>
-    <p>　ならば激突は必然で、この二人の間に無血和解などあり得ない。</p>
-    <p>　どれだけ表面上は大人しくして、手を取り合っていても……娘はいつでも父を刺せるように刃物を隠し持っていて、父は娘がいつ襲い掛かって来るのかと喜んで待っている。</p>
-    <p>　ただ、その時が今日だったというだけの事だ。</p>
+    <p>我再次理解了伯恩哈特应该见梅赛德斯。</p>
+    <p>梅赛德斯是伯恩哈特这条龙第一次发现的同类。</p>
+    <p>那么激烈的冲突是必然的，这两个人之间不可能有无血和解。</p>
+    <p>不管表面上有多老实，牵着手……女儿总是像刺父亲一样藏着刀，父亲很高兴地等待女儿什么时候来袭击。</p>
+    <p>只是那个时候是今天而已。</p>
     <p></p>
-    <p>“<span class="character">いいよ。仲良く親子喧嘩してきなさい。その間に私達も、今後の身の振り方を考えておくから</span>”</p>
-    <p>“<span class="character">ああ。よく考えておいてくれ……期待しているぞ</span>”</p>
+    <p>“<span class="character">“好啊。好好和父亲吵架吧。在这期间我们也会考虑今后的行动方式。”</span>”</p>
+    <p>“<span class="character">“啊，好好考虑一下……我期待着。”</span>”</p>
     <p></p>
-    <p>　そう言い残し、メルセデスは席を立って部屋を出て行った。</p>
-    <p>　あまりに突然のメルセデスの変貌にジークリンデとフェリックスは唖然としているが、ハンナは不思議と姪の変化を違和感なく受け入れていた。</p>
-    <p>　兆候はずっとあったのだ。そう、最初の頃からずっと……。</p>
-    <p>　ジークリンデと彼女の母が再会して涙を流しながら抱き合っていた時……それを心底つまらなそうな顔で見ていた時から、ずっと……。</p>
+    <p>说完后，梅赛德斯离开了座位离开了房间。</p>
+    <p>对于梅赛德斯突然的变化，吉克林德和菲利克斯目瞪口呆，但是汉娜却毫不奇怪地接受了侄女的变化。</p>
+    <p>征兆一直在。是的，从一开始就一直……。</p>
+    <p>吉克林德和她的母亲重逢，流着泪相拥的时候……从心底里用无聊的表情看着的时候开始，就一直……。</p>
     <p></p>
-    <p>“<span class="character">期待している、か……ねえメルちゃん……それは、どっちの意味で言ったの？</span>”</p>
+    <p>“<span class="character">“你在期待吗？……呐，梅尔……那是说什么意思呢？”</span>”</p>
     <p></p>
-    <p>　既にメルセデスが去った後のドアを見ながら、ハンナは呟く。</p>
-    <p>　メルセデスは果たしてどちらを期待していたのだろう。</p>
-    <p>　自分の味方になってくれる事を期待したのだろうか？</p>
-    <p>　それとも、ベルンハルトがメルセデスにそう期待したように――。</p>
+    <p>汉娜一边看着梅赛德斯已经离开后的门，一边嘟囔着。</p>
+    <p>梅赛德斯到底期待着哪一个呢。</p>
+    <p>你期待着成为自己的伙伴吗？</p>
+    <p>还是说，像伯恩哈特那样期待着梅赛德斯一样——。</p>
     <p></p>
-    <p>“<span class="character">…………結局……ベルンハルトと同じ道に行っちゃった、かあ……</span>”</p>
+    <p>“<span class="character">…………结果……还是和伯恩哈德走的是同一条路，吗……</span>”</p>
     <p></p>
-    <p>　ハンナは沈んだ声で、ポツリと呟いた。</p>
-    <p>　いつか狩猟祭でメルセデスが優勝した時……彼女の隣に立つジークリンデを見て、もしかしたらと期待した。</p>
-    <p>　ベルンハルトと違って隣に立つ友がいるならば……打算であっても善行を積むならば、もしかしたらベルンハルトと違う道に進んでくれるかもしれないと。</p>
-    <p>　だが結果はどうだ。見事にベルンハルトと同じ道に突き進もうとしている。</p>
-    <p>　無慈悲な支配者への道に踏み込んでしまっている。</p>
-    <p>　ハンナも分かっているのだ。メルセデスが提示した答え、それ自体は間違いではないと。</p>
-    <p>　確かにこれから起こる不可避の戦争を止めるには、それくらい強引で乱暴な手を取るしかないのだと。</p>
-    <p>　そしてメルセデスにはそれを実行に移せる力があり、今がその時なのだと、頭では分かる。</p>
-    <p>　最善手ではないのかもしれない。だが少なくとも、これ以上の手を今ここで提案してみろと言われたならば、思い付く気がしない。</p>
-    <p>　時代が支配者を必要とした……そういう事なのだろう。</p>
-    <p>　だが、それでもだ。それでも……覇道の果てを突き進んだ先、姪がたった一人で佇んでいる姿を想像すると、どうしても複雑な気持ちになってしまう。</p>
+    <p>汉娜用沉寂的声音嘟囔着。</p>
+    <p>什么时候在狩猎祭上梅赛德斯获胜的时候……看到站在她旁边的吉克林德，怀有着期待。</p>
+    <p>如果有和伯恩哈特不同站在旁边的朋友的话……就算是算计也要积善，说不定会和伯恩哈特走上不同的道路。</p>
+    <p>但是结果怎么样。想漂亮地和伯恩哈特走同一条路。</p>
+    <p>走上了残酷的支配者的道路。</p>
+    <p>汉娜也知道。梅赛德斯提出的答案本身并没有错。</p>
+    <p>确实，为了阻止今后发生的不可避免的战争，只能采取强硬粗暴的手段。</p>
+    <p>而且，梅赛德斯有将其付诸实行的能力，头脑中就能明白现在正是那个时候。</p>
+    <p>也许不是最好的办法。但是至少，如果被要求现在就在这里提出更多的建议的话，我就不会想到。</p>
+    <p>时代需要统治者……就是这样吧。</p>
+    <p>但是，即便如此。尽管如此……一想到在霸道尽头冲过去的侄女一个人站着的样子，就觉得很复杂。</p>
     <p></p>
-    <p>　ベルンハルトは独りだった。いや、ハンナ達が独りにさせてしまった。</p>
-    <p>　誰もベルンハルトを理解出来なくて、隣に立てなかったからだ。</p>
-    <p>　ハンナは決して弟の理解者にはなれず、今ではある程度割り切って付き合う事くらいは出来るが……それでも心は一線を引いたままだ。</p>
+    <p>伯恩哈特独自一人。不，汉娜他们让她独自一人。</p>
+    <p>因为没有人理解伯恩哈特，所以没能站在旁边。</p>
+    <p>汉娜绝对不能成为弟弟的理解者，虽然现在也能有一定程度的果断地交往……但是心还是划了一条线。</p>
     <p></p>
-    <p>“<span class="character">……本当に、同じ道なのかな？</span>”</p>
+    <p>“<span class="character">“……真的是同一条路吗？”</span>”</p>
     <p></p>
-    <p>　落ち込むハンナの耳に、ジークリンデの声が響いた。</p>
+    <p>失落的汉娜耳边响起了吉克林德的声音。</p>
     <p></p>
     <p>◇</p>
     <p></p>
-    <p>　メルセデスが屋敷に到着すると、屋敷内は不思議なほどに静かであった。</p>
-    <p>　使用人も、他の家族の誰もいない。</p>
-    <p>　ただ、ベルンハルトだけが待ちわびていたように大広間に立っていた。</p>
+    <p>梅赛德斯到达宅邸后，宅邸内安静得出奇。</p>
+    <p>没有佣人，也没有其他家人。</p>
+    <p>然而，只有伯恩哈德站在大厅里，仿佛一直在等待。</p>
     <p></p>
-    <p>“<span class="character">今日は良き日だ</span>”</p>
+    <p>“<span class="character">“今天是个好日子。”</span>”</p>
     <p></p>
-    <p>　メルセデスに背中を向けたまま、どこか嬉しそうな声で言う。</p>
-    <p>　着ている外套が風もないのにはためいているのは、既に魔力を高めているからか。</p>
+    <p>背对着梅赛德斯，用似乎很开心的声音说。</p>
+    <p>穿着的外套没有风却在飘荡，是因为已经提高了魔力吗。</p>
     <p></p>
-    <p>“<span class="character">いつかこの日が来ると思っていた</span>”</p>
+    <p>“<span class="character">我以为这一天总会到来。</span>”</p>
     <p></p>
-    <p>　メルセデスは声に出さず、ベルンハルトの言葉に同意する。</p>
-    <p>　そう、いつか来る日だった。</p>
-    <p>　初めて出会ったあの時から、親子共にその日がいつか来る事を確信していた。</p>
+    <p>梅赛德斯不出声，同意伯恩哈特的话。</p>
+    <p>是的，总有一天会来的。</p>
+    <p>从第一次见面的那一刻起，我就坚信那一天总会到来。</p>
     <p></p>
-    <p>“<span class="character">予感があった……今日が、そうなのだと</span>”</p>
+    <p>“<span class="character">我有预感……今天就是这样</span>”</p>
     <p></p>
-    <p>　ベルンハルトが振り返り、二人の目が合った。</p>
-    <p>　その瞬間、最早言葉は不要とさえ思えた。</p>
-    <p>　ギラギラとした黄金の眼が、言葉以上に雄弁に互いの意思を相手に伝えているのだから。</p>
-    <p>　それでも言葉を発するのは、ベルンハルトがこの状況を楽しんでいるからだろう。</p>
+    <p>伯恩哈特回头，两个人的目光相遇了。</p>
+    <p>在那一瞬间，甚至觉得不需要再多的言语了。</p>
+    <p>闪闪发光的黄金之眼，比言语更雄辩地向对方传达着彼此的意思。</p>
+    <p>即便如此，之所以会说话，大概是因为伯恩哈特很享受这种状况吧。</p>
     <p></p>
-    <p>“<span class="character">……ようやく、檻から出てきたな</span>”</p>
+    <p>“<span class="character">……终于从笼子里出来了。</span>”</p>
     <p></p>
-    <p>　メルセデスが自分の本性を嫌い、自らを閉じ込めていた事はベルンハルトも見抜いていた。</p>
-    <p>　だが、同時に分かっていた。娘の本質が自分と同じである事を。</p>
-    <p>　だから彼は待っていたのだ。</p>
-    <p>　娘が檻を壊して出て来るその日を。</p>
+    <p>伯恩哈特也看穿了梅赛德斯讨厌自己的本性，将自己封闭起来。</p>
+    <p>但是，同时也明白了。女儿的本质和自己一样。</p>
+    <p>所以他在等着。</p>
+    <p>在女儿打破笼子出来的那一天。</p>
     <p></p>
-    <p>“<span class="character">問おう、我が娘よ。何を求める？</span>”</p>
-    <p>“<span class="character">父上の持っているダンジョンを</span>”</p>
-    <p>“<span class="character">手に入れてどうする？</span>”</p>
-    <p>“<span class="character">全てのダンジョンを制覇し、止まったままの世界の時を動かす。その過程で必要ならば世界も捻じ伏せよう</span>”</p>
+    <p>“<span class="character">提问，我的女儿啊。你想要什么？</span>”</p>
+    <p>“<span class="character">把父亲拥有的地下城给我。</span>”</p>
+    <p>“<span class="character">到手后怎么办？</span>”</p>
+    <p>“<span class="character">征服所有地牢并推动静止世界的时间。如有必要，让我扭曲世界</span>”</p>
     <p></p>
-    <p>　ベルンハルトの笑みが深くなった。</p>
-    <p>　それは、同志を見付ける事の出来た喜びに満ちた顔だ。</p>
-    <p>　初めて同じ目的を持った者と出会えた歓喜に、彼は打ち震えている。</p>
+    <p>伯恩哈特的笑容加深了。</p>
+    <p>那张脸上洋溢着找到同志的喜悦。</p>
+    <p>对于第一次遇到有同样目的的人的喜悦，他颤抖着。</p>
     <p></p>
-    <p>“<span class="character">……素晴らしい。満点の答えだ</span>”</p>
+    <p>“<span class="character">……太棒了。这是满分的答案。</span>”</p>
     <p></p>
-    <p>　ベルンハルトが手袋を外し、指輪が輝いた。</p>
-    <p>　それと同時に彼の手に黒い槍が握られる。</p>
-    <p>　アレが何なのか……などと、今更問うまでもない。</p>
-    <p>　あの槍こそ、ベルンハルトが持つダンジョンなのだろう。</p>
-    <p>　それに応え、メルセデスもまたハルバードを出す。</p>
-    <p>　父と娘、二人が同じ結論に達した。</p>
-    <p>　だが無血和解は決して有り得ない。</p>
-    <p>　二人は今、かつてない程に分かり合っている。互いを理解している。</p>
-    <p>　だからこそ、ここで戦わないという道は絶対にない。</p>
-    <p>　何故なら、ダンジョンを全て手に入れる事が出来るのは一人だけだからだ。</p>
-    <p>　ならば決めなくてはならない。どちらが上なのか。どちらが今後の世界の命運を握るに相応しい存在なのかを。</p>
+    <p>伯恩哈特摘下手套，戒指闪闪发光。</p>
+    <p>与此同时，他的手上还握着一把黑枪。</p>
+    <p>那是什么……事到如今也不必再问了。</p>
+    <p>那把枪才是伯恩哈特的地下城吧。</p>
+    <p>对此，梅赛德斯也再次拿出斧枪。</p>
+    <p>父亲和女儿两个人得出了同样的结论。</p>
+    <p>但是，决不可能无血和解。</p>
+    <p>两个人现在互相了解到了前所未有的程度。互相理解。</p>
+    <p>正因为如此，绝对没有不在这里战斗的道路。</p>
+    <p>要说为什么的话，因为只有一个人能把地下城全部弄到手。</p>
+    <p>那么必须决定。哪个是上位。谁是适合掌握今后世界命运的存在。</p>
     <p></p>
-    <p>“<span class="character">それでこそ、我が片腕に相応しい</span>”</p>
-    <p>“<span class="character">悪いがそれは間違いだ、父上。片腕は貴方の方だよ</span>”</p>
+    <p>“<span class="character">正因为如此，才是我的左膀右臂。</span>”</p>
+    <p>“<span class="character">不好意思，那是错的，父亲。副手是你。</span>”</p>
     <p></p>
-    <p>　メルセデスが好戦的に笑い、二人が発する魔力の波動だけで広間に風が吹き荒れる。</p>
-    <p>　調度品が落ちて割れ、シャンデリアが五月蠅いくらいに揺れた。</p>
-    <p>　しかし周囲の音とは裏腹に、二人の間には静けさだけがあった。</p>
-    <p>　余計な騒音を全て意識外に追い出し、全神経を相手にのみ注ぐ事で生まれる二人だけの無音の世界……その中で父と娘は互いにのみ意識を傾け、決して動きを見逃さぬように、聞き逃さぬようにと集中力を高めていく。</p>
-    <p>　そして――。</p>
+    <p>梅赛德斯好战地笑着，只靠两人发出的魔力波动，风就在大厅里狂吹。</p>
+    <p>日用器具掉下来摔碎了，枝形吊灯在五月的苍蝇声中摇晃。</p>
+    <p>但是和周围的声音相反，两个人之间只有寂静。</p>
+    <p>将多余的噪音全部赶出意识之外，将全部神经注入对方而诞生的只有两个人的无声世界……在这之中，父女只互相倾心，为了不放过动作，为了不让对方听漏，提高集中力。</p>
+    <p>然后——。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">――私にひれ伏せ、我が娘メルセデスよ！</span>”</p>
-    <p>“<span class="character">――私に従え、我が父ベルンハルト！</span>”</p>
+    <p>“<span class="character">——向我跪拜，我的女儿梅赛德斯！</span>”</p>
+    <p>“<span class="character">——服从于我，我的父亲伯恩哈特！</span>”</p>
     <p></p>
-    <p>　二人の武器が、衝突した。</p>
-    <p>仲良し親子。</p>
+    <p>两个人的武器发生了冲突。</p>
+    <p class="divline"></p>
+    <p>真是一对关系良好的父女。</p>
 </body>
 
 </html>
